# df_checker

./: .gitignore  DataFrameChangeTracker.py  Makefile  README.md  __init__.py  pyproject.toml
df_checker/: DataFrameChangeTracker.py  __init__.py
src/: DataFrameChangeTracker.py  __init__.py
tests/: test_dataframe_tracker.py
