[tool.poetry]
name = "df-checker"
version = "0.1.0"
description = "Helper to check dataframe changes"
authors = ["Necromenta <andrezcar1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
functools = "tabulate"
tabulate = "^0.9.0"
typing = "^3.10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
