[tool.poetry]
name = "df-checker"
version = "0.1.0"
description = "Helper to check dataframe changes"
authors = ["Necromenta <andrezcar1998@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
tabulate = "^0.9.0"
six = "^1.16.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
